# PJS4-BTTP

./: .gitignore  .gitmodules  LICENCE.md  README.md
client/: CMakeLists.txt  README.md
client/cli/: CMakeLists.txt
client/cli/include/: BTTP-CLI.h  CLI.h  Console.h  Contexte.h  Racine.h.in
client/cli/include/commandes/: Autorisations.h  Commande.h  Commandes.h  Distant.h  Execution.h  Identites.h  Scripts.h  Serveurs.h
client/cli/include/erreur/: ConfirmationMDP.h  ConfirmationMdp.h  Identite.h
client/cli/src/: BTTP-CLI.cpp  CLI.cpp  Console.cpp  Contexte.cpp  bttp-cli.cpp  bttp-client-cli.cpp
client/cli/src/commandes/: Autorisations.cpp  Commande.cpp  Commandes.cpp  Distant.cpp  Execution.cpp  Identites.cpp  Scripts.cpp  Serveurs.cpp
client/cli/test/: CMakeLists.txt
client/cli/test/include/: Racine.h.in
client/cli/test/src/: bttp-test.cpp
client/coeur/: CMakeLists.txt
client/coeur/include/: BTTP-Client.h  Contexte.h  Racine.h.in
client/coeur/src/: BTTP-Client.cpp  Contexte.cpp
client/gui/: CMakeLists.txt
client/gui/include/: BTTP-GUI.h
client/gui/src/: bttp-gui.cpp
client/include/: BTTP-Client.h  Connexion.h  Contexte.h  Distant.h  Fichiers.h  Identites.h  Racine.h.in
client/include/erreur/connexion/: DejaOuverte.h  Fermee.h  Ouverture.h  Resolution.h  Timeout.h
client/include/erreur/contexte/: VariableDejaExistante.h  VariableInexistante.h
client/include/erreur/fichiers/: Inexistant.h  Ouverture.h
client/include/erreur/identites/: MetaIncorrectes.h
client/include/identites/: Identites.h  Serveurs.h
client/include/scripts/: Autorisations.h  Script.h  Scripts.h
client/include/scripts/erreur/: Ajout.h  Execution.h  Inexistant.h  SupressionFichierSortie.h
client/include/scripts/messages/: DemandeAjout.h  DemandeSuppression.h  ReponseAjout.h
client/include/serveurs/: Appareil.h  Script.h  Serialisable.h  Serveur.h  Serveurs.h
client/include/serveurs/erreur/: DejaPresent.h
client/include/serveurs/messages/: DemandeAppareils.h  DemandeAuthentification.h  DemandeClePublique.h  DemandeEmpreinteCle.h  DemandeMotDePasse.h  DemandeScripts.h  DemandeUtilisateur.h  ReponseAppareils.h  ReponseClePublique.h  ReponseEmpreinteCle.h  ReponseMotDePasse.h  ReponseScripts.h  ReponseUtilisateur.h
client/include/transactions/: Client.h  Distant.h
client/include/transactions/erreur/: Horodotage.h  Timestamp.h
client/include/transactions/messages/: DemandeDistant.h
client/src/: BTTP-Client.cpp  Connexion.cpp  Contexte.cpp  Distant.cpp  Fichiers.cpp  Identites.cpp
client/src/identites/: Identites.cpp
client/src/scripts/: Autorisations.cpp  Script.cpp  Scripts.cpp
client/src/serveurs/: Appareil.cpp  Script.cpp  Serveur.cpp  Serveurs.cpp
client/src/serveurs/messages/: ReponseAppareils.cpp  ReponseScripts.cpp
client/src/transactions/: Client.cpp  Distant.cpp
client/test/: CMakeLists.txt
client/test/include/: Racine.h.in
protocole/: CMakeLists.txt  README.md
protocole/cli/: CMakeLists.txt  cli.cpp
protocole/demo/: CMakeLists.txt
protocole/demo/include/: MessageDemo.h  Outils.h
protocole/demo/src/: bttp-demo.cpp  demo.cpp
protocole/include/: BTTP.h  Commun.h  Connexion.h  Contexte.h  Erreur.h  Racine.h  Racine.h.in  Transaction.h
protocole/include/erreur/: Erreur.h
protocole/include/identite/: Cles.h  Identite.h  Meta.h
protocole/include/identite/erreur/: Chiffrement.h  Dechiffrement.h  Doublon.h  Exportation.h  Importation.h  Signature.h
protocole/include/message/: ClePublique.h  Demande.h  Erreur.h  Execution.h  Fermeture.h  Message.h  MessageControle.h  Messages.h  Ouverture.h  Pret.h  Reponse.h  Resultat.h
protocole/include/message/controle/: Execution.h  Message.h  Messages.h  Ouverture.h  Relais.h
protocole/include/message/erreur/: ClePubliqueVide.h
protocole/include/messages/: Demande.h  Erreur.h  Execution.h  Fermeture.h  Message.h  Messages.h  Ouverture.h  Pret.h  Reponse.h
protocole/include/messages/controle/: Execution.h  Message.h  Messages.h  Ouverture.h  Relais.h
protocole/include/tests/: IdenditeTest.h
protocole/include/transaction/: Client.h  Controle.h  Distant.h  Mode.h  Transaction.h  Transactions.h
protocole/include/transaction/erreur/: DejaFermee.h  DejaOuverte.h  EnteteInvalide.h  Fermee.h  Fermeture.h  Ouverture.h  OuvertureNonAutorisee.h  Refusee.h
protocole/include/transactions/: Client.h  Controle.h  Distant.h  Transaction.h
protocole/include/transactions/erreur/: DejaFermee.h  DejaOuverte.h  EnteteInvalide.h  Fermee.h  (+3 more)
protocole/src/: BTTP.cpp  Contexte.cpp  Identite.cpp  Identite.h  bttp.cpp
protocole/src/erreur/: Erreur.cpp
protocole/src/identite/: Cles.cpp  Identite.cpp  Meta.cpp
protocole/src/message/: ClePublique.cpp  Demande.cpp  Erreur.cpp  Execution.cpp  Fermeture.cpp  Message.cpp  Message.h  Messages.cpp  Ouverture.cpp  Reponse.cpp  Resultat.cpp
protocole/src/messages/: ClePublique.cpp  Demande.cpp  Erreur.cpp  Execution.cpp  Fermeture.cpp  Message.cpp  Messages.cpp  Ouverture.cpp  Reponse.cpp  Resultat.cpp
protocole/src/transaction/: Client.cpp  Controle.cpp  Distant.cpp  Transaction.cpp
protocole/src/transactions/: Client.cpp  Controle.cpp  Distant.cpp  Transaction.cpp
protocole/test/: CMakeLists.txt
protocole/test/include/: IdenditeTest.h  Identite.h  Racine.h.in
protocole/test/src/: Identite.cpp  IdentiteTest.cpp  bttp-test.cpp
protocole/tests/: CMakeLists.txt  IdentiteTest.cpp  bttp.cpp
protocole/tests/include/: IdenditeTest.h
protocole/tests/src/: IdentiteTest.cpp  main.cpp
serveur/: CMakeLists.txt  README.md
serveur/include/: Accepteur.h  BTTP-Serveur.h  Journal.h  Racine.h.in
serveur/include/data/: Hash.h  Modele.h  Script.h  Source.h  Utilisateur.h
serveur/include/sessions/: Gestionnaire.h  ISession.h  Session.h
serveur/src/: Accepteur.cpp  BTTP-Serveur.cpp  bttp-serveur.cpp  bttp-srv.cpp
serveur/src/data/: Hash.cpp  Script.cpp  Source.cpp  Utilisateur.cpp
serveur/src/sessions/: Gestionnaire.cpp  Session.cpp
serveur/test/: CMakeLists.txt
serveur/test/include/: Racine.h.in
serveur/test/src/: bttp-test.cpp
(+124 files in other folders)
